--- a/study-content/资料/01-02-study -materials/01-02-codes/01-02-03-01-js-performance/09-append-node.html
+++ b/study-content/资料/01-02-study -materials/01-02-codes/01-02-03-01-js-performance/09-append-node.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>优化节点添加</title>
 </head>
+
 <body>
   <script>
-
+    // 优化前：
     for (var i = 0; i < 10; i++) {
       var oP = document.createElement('p')
-      oP.innerHTML = i 
+      oP.innerHTML = i
       document.body.appendChild(oP)
     }
 
+    // 优化后：
     const fragEle = document.createDocumentFragment()
     for (var i = 0; i < 10; i++) {
       var oP = document.createElement('p')
-      oP.innerHTML = i 
+      oP.innerHTML = i
       fragEle.appendChild(oP)
     }
 
@@ -25,4 +28,5 @@
 
   </script>
 </body>
+
 </html>
